Update actions-riff-raff to v4
guardian/actions-riff-raff@v4 no longer needs
aws-actions/configure-aws-credentials, so it’s handy to update the
former and remove the latter now, avoiding the build failures that were
happening.

(And newer is better!)

The updates required to the yaml are described in the release notes for
v3 and v4 of actions-riff-raff:

- https://github.com/guardian/actions-riff-raff/releases/tag/v3.0.0
- https://github.com/guardian/actions-riff-raff/releases/tag/v4.0.0

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,14 +34,11 @@ jobs:
         with:
           files: junit-tests/*.xml
 
-      - uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: eu-west-1
-          role-to-assume: ${{secrets.GU_RIFF_RAFF_ROLE_ARN}}
-
-      - uses: guardian/actions-riff-raff@v2
+      - uses: guardian/actions-riff-raff@v4
         with:
           configPath: riff-raff.yaml
+          roleArn: ${{ secrets.GU_RIFF_RAFF_ROLE_ARN }}
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
           projectName: Content Platforms::editors-picks-uploader-lambda
           buildNumberOffset: 71
           contentDirectories: |
